--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
 <!DOCTYPE html>
-
-<title>Codigo de html basico</title>
+<html lang="es">
+<html>
+    <header>
+        <h1>CODIGO HTML</h1>
+    </header>
+    <head>
+        <title>Codigo de html basico</title>
+    </head>
+    <body>
+        <h2>mi primera pagina con un html basico</h2>
+        <p>comence a conocer algunos comandos para crear un sitio web</p>
+        <p>vamos a agragarle unos items</p>
+    </body>
+    <nav>
+        <ul>
+            <li>menu principal</li>
+            <li>opciones</li>
+            <li>autores</li>
+        </ul>
+    </nav>
+   
+</html>
